--- a/golink/Cargo.toml
+++ b/golink/Cargo.toml
@@ -10,4 +10,4 @@ rocket = "0.5.0-rc.1"
 
 [dependencies.rocket_dyn_templates]
 version = "0.1.0-rc.1"
-features = ["handlebars"]
+features = ["tera"]
