--- a/golink/Cargo.toml
+++ b/golink/Cargo.toml
@@ -3,12 +3,8 @@ name = "golink"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.1"
+rocket = "0.4.10"
+rocket_contrib = { version = "0.4.10", features = ["diesel_postgres_pool", "tera_templates"] }
 diesel = { version = "1.4.4", features = ["postgres"] }
-
-[dependencies.rocket_dyn_templates]
-version = "0.1.0-rc.1"
-features = ["tera"]
