--- a/golink/Cargo.toml
+++ b/golink/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 rocket = "0.4.10"
 rocket_contrib = { version = "0.4.10", features = ["diesel_postgres_pool", "tera_templates"] }
 diesel = { version = "1.4.4", features = ["postgres"] }
+serde = { version = "1.0.117", features = ["derive"] }
