Add rust analysis tools to gitpod config

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,6 +5,9 @@ tasks:
   - name: set rust default
     command: rustup default nightly
 
+  - name: install rust tools
+    command: rustup component add rust-analysis rust-src rls clippy
+
 vscode:
   extensions:
     - swellaby.rust-pack
