add sea-orm dep

--- a/golink-axum/Cargo.toml
+++ b/golink-axum/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 axum = "0.5.17"
 tokio = { version = "1.0", features = ["full"] }
+sea-orm = { version = "0.9.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
