--- a/mastodon-client-tauri/src-tauri/Cargo.toml
+++ b/mastodon-client-tauri/src-tauri/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 tauri-build = { version = "1.1.1", features = [] }
 
 [dependencies]
+megalodon = "0.11.8"
 tauri = { version = "1.1.1", features = ["api-all"] }
 
 [features]
