--- a/obsidian-self-destruct/package.json
+++ b/obsidian-self-destruct/package.json
@@ -12,13 +12,17 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/jest": "^29.5.11",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"jest": "^29.7.0",
+		"moment": "^2.30.1",
 		"obsidian": "latest",
 		"prettier": "^3.1.1",
+		"ts-jest": "^29.1.1",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	}
