--- a/obsidian-self-destruct/package.json
+++ b/obsidian-self-destruct/package.json
@@ -11,6 +11,9 @@
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
+	"dependencies": {
+		"moment": "^2.30.1"
+	},
 	"devDependencies": {
 		"@types/jest": "^29.5.11",
 		"@types/node": "^16.11.6",
@@ -19,7 +22,6 @@
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"jest": "^29.7.0",
-		"moment": "^2.30.1",
 		"obsidian": "latest",
 		"prettier": "^3.1.1",
 		"ts-jest": "^29.1.1",
